# cached-dataset

./: .gitignore  README.md  pyproject.toml  pytest.ini
cached_dataset/: __init__.py  dataset.py
tests/: helpers.py  test_disk_cached_dataset.py  test_edge_cases.py  test_getitem.py  test_multiprocessing.py  test_stress.py  test_utils_functions.py
